V 1.0.5 20210412 Eric
  - Add gcs-mapfile-lookup to this package
V 0.0.4 20200409 Eric & JP
  - Replace old package name references with xsede-oauth-mapfile
  - Move docs to docs/ and add CHANGELOG
