@@ -1,93 +1,106 @@
-###############################################################################
-##
-## xsede-oauth-mapfile
-##
-###############################################################################
+***
+# Installing the xsede-oauth-mapfile tool
+***
 
-This package generates a file called xsede-oauth-mapfile with entries like:
+This package generates a file called **xsede-oauth-mapfile** containing entries like:
 
-<xsede_username>@xsede.org <local_username>
+    {xsede_username}@xsede.org {local_username}
 
-Each entry maps an XSEDE OAuth identity of the form <xsede_username>@xsede.org
+Each entry maps an XSEDE OAuth identity of the form {xsede_username}@xsede.org
 to the corresponding local username on a specific XSEDE resource. An XSEDE OAuth
-identity may have multiple lines mapping it to multiple local usernames.
+identity may have multiple lines mapping it to different local usernames.
+The mapping information comes from the XSEDE Central Database (XCDB) and is accessed
+by this software through an API.
 
-XSEDE's Globus Connect Server (GCS) v5.4+ and other tools can use these mappings
-to map OAuth identities to local accounts.
+XSEDE's Globus Connect Server (GCS) v5.4+ and other tools use these mappings to
+access local resources as the authenticated user.
 
-The mapping information comes from XDCDB and is accessed through an API.
+## Install
 
-NOTE:  This package includes a script (gcs-mapfile-lookup) with which Globus Connect Server v5.4 can be configured to be able to use the xsede-oauth-mapfile.  Instructions for doing so can be found in the XSEDE Globus Connect Server v5.4 Installation Guide.
+Choose either RPM or TAR install
 
-INSTALLATION
+#### RPM Install
 
-1) Configure XSEDE RPM repository trust, if installing from RPM
-   For a production version use [Production Repo Trust Instructions](https://software.xsede.org/production/repo/repoconfig.txt)
-   For a development/testing version use [Development Repo Trust Instructions](https://software.xsede.org/development/repo/repoconfig.txt)
+Setup XSEDE RPM repository trust:
 
-2)  Install following 2a) OR 2b)
+  * For production software use [Production Repo Trust Instructions](https://software.xsede.org/production/repo/repoconfig.txt)
+  * For development/testing software use [Development Repo Trust Instructions](https://software.xsede.org/development/repo/repoconfig.txt)
 
-2a) Install from RPM
-   $ yum install xsede-oauth-mapfile
+Install package:
 
-   By default, the rpm will install files under /usr/local/share/utils/xsede_user_mapfile/
-   except as noted below.  Once configured with an API-KEY, the mapfile will default to 
-   /usr/local/etc/grid-security/xsede-oauth-mapfile .
+     $ yum install xsede-oauth-mapfile
 
-2b) Install from TAR
-   # From TAR
-   # Download the latest Production tar or Development/Testing tar from either:
-   https://software.xsede.org/production/xsede-oauth-mapfile/latest
-   https://software.xsede.org/production/xsede-oauth-mapfile/
+The RPM installs files under /usr/local/share/utils/xsede_user_mapfile/ by default,
+except as noted below. The default location for the mapfile is:
 
-   mkdir /my/local/path/xsede-oauth-mapfile-<version>
-   cd /my/local/path/xsede-oauth-mapfile-<version>
-   tar -xzf <downloaded_file>
+    /usr/local/etc/grid-security/xsede-oauth-mapfile
 
-3) If this is your first install, request an XDCDB access API-KEY
-   If you don't have an XDCDB access API-KEY from a previous xsede-oauth-mapfile install
-     obtain one following the instructions at https://xsede-xdcdb-api.xsede.org/
-   In the request specify the "spacct" agent and the resource name that you want
-      mapped acccounts for.
+#### TAR Install
 
-   This request will register your xsede-oauth-mapfile deployment in XDCDB and provide an
-      API-KEY for xsede-oauth-mapfile to use to access the XDCDB API.
+Download the latest Production tar or Development/Testing tar from either:
+* https://software.xsede.org/production/xsede-oauth-mapfile/latest
+* https://software.xsede.org/production/xsede-oauth-mapfile/
 
-4) Configure xsede-oauth-mapfile
-   If you have an etc/xsede-oauth-mapfile-config.json from a previous install, copy it to this
-   install, otherwise create it using the xsede-oauth-mapfile-config-template.json.
+Execute:
 
-   Edit etc/xsede-oauth-mapfile-config.json and set
-      "XA-AGENT": "spacct",
-      "XA-RESOURCE": "<XDCDB resource name>",
-      "XA-API-KEY": "<your API-KEY>"
+    $ mkdir {arbitrary_path}/xsede-oauth-mapfile-<version>
+    $ cd {arbitrary_path}/xsede-oauth-mapfile-<version>
+    $ tar -xzf {downloaded_file}
 
-    The API-KEY may be from a previous xsede-oauth-mapfile configuration, or a new one from
-    step 3) above.
+## Request API Access Key
 
-    Set the permissions for the config for read-only by root because it has an API-KEY:
-    access the XDCDB:
-       chmod 0600 etc/xsede-oauth-mapfile-config.json
+If you don't have an XDCDB access API-KEY from a previous install obtain one using
+the instructions at https://xsede-xdcdb-api.xsede.org/. In the request specify the
+"spacct" agent and which XDCDB resource name you want mapped accounts for. XSEDE's
+active XDCDB resource names are listed at:
+* https://info.xsede.org/wh1/warehouse-views/v1/resources-xdcdb-active/?format=html
 
-5) Setup to run in cron
-   In bin/xsede-oauth-mapfile.sh:
-   - Set MAP_FILE to where you want your production mapfile
-   - Set MAP_FILE_BASE to your base xsede-oauth-mapfile installation directory
+The request will register your xsede-oauth-mapfile deployment in XDCDB and provide
+you an API-KEY for the xsede-oauth-mapfile tool to use to access the XDCDB API.
 
-   cd /etc/cron.hourly
-   ln -s /usr/local/share/utils/xsede_oauth_mapfile/bin/xsede_oauth_mapfile.sh
+### Configure xsede-oauth-mapfile
 
-NOTES
+If you have an etc/xsede-oauth-mapfile-config.json from a previous install, copy it
+to this install, otherwise create it using etc/xsede-oauth-mapfile-config-template.json.
 
-bin/xsede-oauth-mapfile.sh
-    This is the file to be run from /etc/cron.hourly to keep the map file up to date.
-    "xsede-oauth-mapfile.py" and protects against multiple invocations with a file-present
-      flag: ./GEN_MAP.LOCK
-    If that file is present the script exits with an informational message.
-    The script also does a cp of the map file in order to make the process more atomic and
-    less susceptible to any scripting issues that could corrupt the operational map file.
+Edit etc/xsede-oauth-mapfile-config.json and set:
 
-bin/xsede-oauth-mapfile.py
-    Python map file generator. It should run with default python3 and included modules.
+    "XA-AGENT": "spacct",
+    "XA-RESOURCE": "<XDCDB resource name>",
+    "XA-API-KEY": "<your API-KEY>"
 
-Report problems and suggestions to help@xsede.org.
+The API-KEY may be from a previous xsede-oauth-mapfile configuration or a new one
+in the previous step.
+
+Set the permissions for the config for read-only by root to keep the API-KEY private:
+
+    $ chmod 0600 etc/xsede-oauth-mapfile-config.json
+
+In bin/xsede-oauth-mapfile.sh:
+ * Set MAP_FILE to where you want your production mapfile
+ * Set MAP_FILE_BASE to your base xsede-oauth-mapfile installation directory
+
+If you have additional local mappings that don't come from XDCDB, place them in
+/etc/grid-security/xsede-oauth-mapfile.local, or customize the LOCAL_FILE variable
+in bin/xsede-oauth-mapfile.sh to point to your local mappings.
+
+XDCDB generated mappings and local mappings will be combined into the MAP_FILE.
+
+### Setup to generate using cron
+
+Execute as root:
+
+    $ cd /etc/cron.hourly
+    $ ln -s /usr/local/share/utils/xsede_oauth_mapfile/bin/xsede_oauth_mapfile.sh
+
+### Obtaining Support
+
+Report xsede-oauth-mapfile bugs, questions, and suggestions to help@xsede.org.
+
+## NOTES
+
+**bin/xsede-oauth-mapfile.py** - Python map file generator.
+It should run with default python3 and included modules.
+
+**bin/gcs-mapfile-lookup** - Script used by GCS v5.4 to lookup values in
+the **xsede-oauth-mapfile**. Instructions for doing so are in the GCS v5.4 Installation Guide.
