@@ -1,5 +1,6 @@
 V 1.0.5 20210412 Eric
   - Add gcs-mapfile-lookup to this package
+  - Add LOCAL_FILE=/etc/grid-security/xsede-oauth-mapfile.local support in xsede-oauth-mapfile.sh
 V 0.0.4 20200409 Eric & JP
   - Replace old package name references with xsede-oauth-mapfile
   - Move docs to docs/ and add CHANGELOG
